--- a/test09/app/src/main/res/values/strings.xml
+++ b/test09/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
 
     <!-- Strings related to login -->
-    <string name="google_maps_api_key" translatable="false">AIzaSyAnMMKVlsmUXW9Apo2HDS8IdTsv4mRwr0s</string>
+    <string name="google_maps_api_key" translatable="false"></string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password (optional)</string>
     <string name="action_sign_in">Sign in or register</string>
